Fix color contrast ans delete empty links

--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
 }
 a {
   text-decoration: none;
-  color: rgb(123, 121, 248);
+  color: rgb(97, 95, 211);
 }
 
 body {
